--- a/DNDSpellbook/.gitignore
+++ b/DNDSpellbook/.gitignore
@@ -8,6 +8,10 @@
 
 ## User settings
 xcuserdata/
+xcuserdata/*
+*.xcuserstate
+project.xcworkspace/
+project.xcworkspace/*
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
