Edited .gitignore (again)

--- a/DNDSpellbook/.gitignore
+++ b/DNDSpellbook/.gitignore
@@ -10,8 +10,7 @@
 xcuserdata/
 xcuserdata/*
 *.xcuserstate
-project.xcworkspace/
-project.xcworkspace/*
+UserInterfaceState.xcuserstate
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
